Fix #21: Fix spacing between content and footer.

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -215,6 +215,7 @@ body {
     float: left;
     width: @grid_4;
     margin-left: @grid_gutter;
+    margin-bottom: @grid_gutter;
 
     &:first-child {
         margin-left: 0;
